--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,44 @@
-
+<h1>Create a Team and Heroes!</h1>
+<br>
+<form action='/teams' method='post'>
+    <label>Team Name:</label>
+    <input type="text" id="name" name="team[name]">
+    <br>
+    <label>Team Motto:</label>
+    <input type="text" id="motto" name="team[motto]">
+    <br>
+    <h2>Hero 1</h2>
+    <br>
+    <label>Hero's Name:</label>
+    <input type="text" id="member1_name" name="team[member][][name]">
+    <br>
+    <label>Hero's Power:</label>
+    <input type="member1_motto" id="member1_power" name="team[member][][power]">
+    <br>
+    <label>Hero's Biography:</label>
+    <input type="member1_motto" id="member1_bio" name="team[member][][bio]">
+    <br>
+    <h2>Hero 2</h2>
+    <br>
+    <label>Hero's Name:</label>
+    <input type="text" id="member2_name" name="team[member][][name]">
+    <br>
+    <label>Hero's Power:</label>
+    <input type="member2_motto" id="member2_power" name="team[member][][power]">
+    <br>
+    <label>Hero's Biography:</label>
+    <input type="member2_motto" id="member2_bio" name="team[member][][bio]">
+    <br>
+    <h2>Hero 3</h2>
+    <br>
+    <label>Hero's Name:</label>
+    <input type="text" id="member3_name" name="team[member][][name]">
+    <br>
+    <label>Hero's Power:</label>
+    <input type="member3_motto" id="member3_power" name="team[member][][power]">
+    <br>
+    <label>Hero's Biography:</label>
+    <input type="member3_motto" id="member3_bio" name="team[member][][bio]">
+    <br>
+    <input type="submit" name="submit" id="submit">
+</form>
