--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,14 @@
+<h1>Team Name: <%= @team.name%></h1>
+<br>
+<p>Team Motto: <%= @team.motto%> </p>
+<%@hero.each do |obj| %>
+    <h1>Hero Name: <%= obj.name %></h1>
+
+<p>Hero Power: <%= obj.power%> </p>
+<p>Hero Biography: <%= obj.bio %> </p>
+
+<% end%>
+
 
 
 
