--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,29 @@
+<form action="/team" method="post">
+  <h1>Create a Team and Heroes!</h1>
+  <div>
+    Team Name: <input type="text" name="team[name]"><br>
+    Team Motto: <input type="text" name="team[motto]"><br>
+  </div>
 
+  <div>
+    <h2>Hero 1</h2>
+    Hero Name: <input type="text" id="member1_name" name="team[members][][name]"><br>
+    Hero Power: <input type="text" id="member1_power" name="team[members][][power]"><br>
+    Hero Biography: <input type="text" id="member1_bio" name="team[members][][bio]"><br>
+  </div>
+
+  <div>
+    <h2>Hero 2</h2>
+    Hero Name: <input type="text" id="member2_name" name="team[members][][name]"><br>
+    Hero Power: <input type="text" id="member2_power" name="team[members][][power]"><br>
+    Hero Biography: <input type="text" id="member2_bio" name="team[members][][bio]"><br>
+  </div>
+
+  <div>
+    <h2>Hero 3</h2>
+    Hero Name: <input type="text" id="member3_name" name="team[members][][name]"><br>
+    Hero Power: <input type="text" id="member3_power" name="team[members][][power]"><br>
+    Hero Biography: <input type="text" id="member3_bio" name="team[members][][bio]"><br>
+  </div><br>
+  <input type="submit" name="submit" value="submit">
+</form>
