--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,54 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+{team => {name, motto}, member1 => value}
+    <form action="/teams" method="post">
+      <h1>Create a Team and Heroes!</h1>
+      <label for="team_name"> Team Name:
+          <input id="team_name" type="text" name="team[name]" value=""><br>
+      </label>
+      <label for="team_motto"> Team Motto:
+          <input id="team_motto" type="text" name="team[motto]" value=""><br>
+      </label>
 
+      <h3>Hero 1</h3>
+      <label for="member1_name">Hero's Name:
+        <input id="member1_name" type="text" name="team[members][][name]" value=""><br>
+      </label>
+      <label for="member1_power">Hero's Power:
+        <input id="member1_power" type="text" name="team[members][][power]" value=""><br>
+      </label>
+      <label for="member1_bio">Hero's Biography:
+        <input id="member1_bio" type="text" name="team[members][][bio]" value=""><br>
+      </label>
+
+      <h3>Hero 2</h3>
+      <label for="member2_name">Hero's Name:
+        <input id="member2_name" type="text" name="team[members][][name]" value=""><br>
+      </label>
+      <label for="member2_power">Hero's Power:
+        <input id="member2_power" type="text" name="team[members][][power]" value=""><br>
+      </label>
+      <label for="member2_bio">Hero's Biography:
+        <input id="member2_bio" type="text" name="team[members][][bio]" value=""><br>
+      </label>
+
+      <h3>Hero 3</h3>
+      <label for="member3_name">Hero's Name:
+        <input id="member3_name" type="text" name="team[members][][name]" value=""><br>
+      </label>
+      <label for="member3_power">Hero's Power:
+        <input id="member3_power" type="text" name="team[members][][power]" value=""><br>
+      </label>
+      <label for="member3_bio">Hero's Biography:
+        <input id="member3_bio" type="text" name="team[members][][bio]" value=""><br>
+      </label>
+
+        <input type="submit" name="" value="submit">
+    </form>
+  </body>
+</html>
