--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,25 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <h1> <%= params[:team][:name] %> </h1>
 
+    <h3>Team Motto: <%= "#{params[:team][:motto]}" %> </h3>
 
+      <h3>Hero Name: <%= "#{params[:team][:members][0][:name]}" %> </h3>
+      Hero Power: <%= "#{params[:team][:members][0][:power]}" %> <br>
+      Hero Biography: <%= "#{params[:team][:members][0][:bio]}" %> <br>
 
+      <h3>Hero Name:  <%= "#{params[:team][:members][1][:name]}" %> </h3>
+      Hero Power: <%= "#{params[:team][:members][1][:power]}" %> <br>
+      Hero Biography: <%= "#{params[:team][:members][1][:bio]}" %> <br>
+
+      <h3>Hero Name:  <%= "#{params[:team][:members][2][:name]}" %> </h3>
+      Hero Power: <%= "#{params[:team][:members][2][:power]}" %> <br>
+      Hero Biography: <%= "#{params[:team][:members][2][:bio]}" %> <br>
+
+  </body>
+</html>
