--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,12 @@
+<div class="team">
+  <h1><%= @team.name %></h1><br>
+  <h2>Team Motto: <%= @team.motto %></h2>
+</div><br>
 
-
-
+<% @heroes.each do |hero| %>
+<div class="hero">
+  <h3>Hero Name: <%= hero.name %></h3>
+  <p>Hero Power: <%= hero.power %></p>
+  <p>Hero Biography: <%= hero.biography %></p>
+</div><br>
+<% end %>
