--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,19 @@
+<h1><%=@team.name%></h1>
+<h2>Team Motto: <%=@team.motto%></h2>
+
+<% @heroes.each do |hero| %>
+<h3>Hero Name: <%=hero.name%></h3>
+<h5>Hero Power: <%=hero.power%></h5>
+<h5>Hero Biography: <%=hero.bio%></h5>
+<% end %>
 
 
-
+<!-- <h3>Hero Name: <%=@heroes[0].name%></h3>
+<h5>Hero Power: <%=@heroes[0].power%></h5>
+<h5>Hero Biography: <%=@heroes[0].bio%></h5>
+<h3>Hero Name: <%=@heroes[1].name%></h3>
+<h5>Hero Power: <%=@heroes[1].power%></h5>
+<h5>Hero Biography: <%=@heroes[1].bio%></h5>
+<h3>Hero Name: <%=@heroes[2].name%></h3>
+<h5>Hero Power: <%=@heroes[2].power%></h5>
+<h5>Hero Biography: <%=@heroes[2].bio%></h5> -->
