--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <h1> Create a Team and Heroes!</h1>
+    <form action="/team" method="POST"> <label> Team Name:</label>
 
+      <input type="text" name="team[name]">
+      <br>
+      <label> Team Motto:</label>
+
+       <input type="text" name="team[motto]">
+
+       <h2> Hero 1 </h2>
+         <label> Name: </label>
+         <input id="member1_name" type="text" name="team[hero][][name]"><br>
+         <label> Power: </label>
+         <input id="member1_power" type="text" name="team[hero][][power]"><br>
+         <label> Bio: </label>
+         <input id="member1_bio" type="text" name="team[hero][][bio]">
+
+
+
+         <h2> Hero 2 </h2>
+           <label> Name: </label>
+           <input id= "member2_name" type="text" name="team[hero][][name]"><br>
+           <label> Power: </label>
+           <input id= "member2_power" type="text" name="team[hero][][power]"><br>
+           <label> Bio: </label>
+           <input id= "member2_bio" type="text" name="team[hero][][bio]">
+
+           <h2> Hero 3 </h2>
+             <label> Name: </label>
+             <input id= "member3_name" type="text" name="team[hero][][name]"><br>
+             <label> Power: </label>
+             <input id= "member3_power" type="text" name="team[hero][][power]"><br>
+             <label> Bio: </label>
+             <input id ="member3_bio" type="text" name="team[hero][][bio]">
+
+            <br>
+            <br>
+            <input id="submit" type="submit">
+
+
+    </form>
+
+  </body>
+</html>
