--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,12 @@
+<h1><%= @team[:name] %></h1>
+<h2>Team Motto: <%= @team[:motto] %></h2>
 
+<dl>
+<% @members.each do |member| %>
+    <h2>Hero Name: <%= member.name %></h2>
+    <p>Hero Power: <%= member.power %></p>
+    <p>Hero Biography: <%= member.bio %></p>
+<% end %>
+</dl>
 
 
